--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.7",
     "twilio": "^5.3.5"
   },
   "scripts": {
     "start": "nodemon server.js",
     "dev": "nodemon server.js"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
   }
 }
