--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ EMAIL_HOST=smtp.example.com
 EMAIL_PORT=587
 EMAIL_USER=saaraatrends@gmail.com
 EMAIL_PASS=zutm uoao flhj gzse
-CLIENT_URL=http://localhost:5173 # Replace with your frontend URL
+CLIENT_URL=http://localhost:5174 
 CLOUDINARY_CLOUD_NAME = duxafj5j5
 CLOUDINARY_API_KEY= 928852323334264
 CLOUDINARY_API_SECRET = HI57AD38WFCBMO9En_mSmV8DfVk
