--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "twilio": "^5.3.5"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   }
 }
