--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "twilio": "^5.3.5"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev":"nodemon server.js"
   }
 }
