--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ EMAIL_PASS=zutm uoao flhj gzse
 CLOUDINARY_CLOUD_NAME = duxafj5j5
 CLOUDINARY_API_KEY= 928852323334264
 CLOUDINARY_API_SECRET = HI57AD38WFCBMO9En_mSmV8DfVk
-# SERVER_URL=https://c577-49-43-34-156.ngrok-free.app
-# SERVER_URL=http://localhost:5000/
+# SERVER_URL=https://c577-49-43-34-156.ngrok-free.app/api
+# SERVER_URL=http://localhost:5000/api
 SERVER_URL=https://backend-gz4e.onrender.com/api
