--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ CLOUDINARY_API_KEY= 928852323334264
 CLOUDINARY_API_SECRET = HI57AD38WFCBMO9En_mSmV8DfVk
 # SERVER_URL=https://c577-49-43-34-156.ngrok-free.app/api
 # SERVER_URL=http://localhost:5000/api
-# SERVER_URL=https://backend-gz4e.onrender.com/api
+SERVER_URL=https://saaraa-backend.vercel.app/api
