--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start:dev": "nodemon server.js"
   }
 }
