--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "uuid": "^11.0.3"
   },
   "scripts": {
-    "start": "nodemon server.js"
-   
+    "start": "node server.js",
+    "dev":"nodemon server.js"
   }
 }
