--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ CLOUDINARY_CLOUD_NAME = duxafj5j5
 CLOUDINARY_API_KEY= 928852323334264
 CLOUDINARY_API_SECRET = HI57AD38WFCBMO9En_mSmV8DfVk
 SUPERADMIN_SECRET_KEY=SitaRam
+#SaaraaTrends 
+NODE_ENV=development
+# production
 # SERVER_URL=https://c577-49-43-34-156.ngrok-free.app/api
 # SERVER_URL=http://localhost:5000/api
 # SERVER_URL=http://192.168.29.58:5000/api
